New things added

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -49,7 +49,7 @@
                 <a href="pages/reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
-                <a href="#mcs" class="nav-link">Get MC</a>
+                <a href="#categories" class="nav-link">Get MC</a>
             </li>
             <li class="nav-item">
                 <a href="pages/contact.html" class="nav-link">Contact</a>
@@ -142,7 +142,7 @@
                 <div class="row flex even-columns">
                     <div class="hero-text">
                         <h2>Master of Ceremony</h2>
-                        <a href="#mcs" class="btn btn-primary">Book Now</a>
+                        <a href="#categories" class="btn btn-primary">Book Now</a>
                     </div>
                     <div class="hero-img">
                         <img src="assets/img/mc/mc_hero.png" alt="" class="img-fluid">
@@ -506,7 +506,7 @@
                         <a href="#home">Home</a>
                         <a href="pages/about.html">About</a>
                         <a href="pages/reviews.html">Reviews</a>
-                        <a href="#mcs">Get MC</a>
+                        <a href="#categories">Get MC</a>
                         <a href="pages/contact.html">Contact</a>
                     </nav>
                 </div>
