--- a/celebrate/pages/mc_user_view.html
+++ b/celebrate/pages/mc_user_view.html
@@ -47,7 +47,7 @@
                 <a href="reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
-                <a href="../index.html#mcs" class="nav-link">Get MC</a>
+                <a href="../index.html#categories" class="nav-link">Get MC</a>
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link">Contact</a>
@@ -188,7 +188,7 @@
                     <!-- <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
                     <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
                     <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe> -->
-                    <div class="mc-photo">
+                    <!-- <div class="mc-photo">
                         <img src="../assets/img/mc/mc31.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="mc-photo">
@@ -196,10 +196,25 @@
                     </div>
                     <div class="mc-photo">
                         <img src="../assets/img/mc/mc31.jpg" alt="" class="img-fluid">
-                    </div>
+                    </div> -->
+                    <video width="300px" controls id="myvideo">
+                        <source src="../assets/video/rain.mp4" type="video/mp4">
+                        <source src="rain.html" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
+                    <video width="300px" controls id="myvideo">
+                        <source src="../assets/video/rain.mp4" type="video/mp4">
+                        <source src="rain.html" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
+                    <video width="300px" controls id="myvideo">
+                        <source src="../assets/video/rain.mp4" type="video/mp4">
+                        <source src="rain.html" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
                 <div class="flex even-columns pb-0">
-                    <div class="mc-photo">
+                    <!-- <div class="mc-photo">
                         <img src="../assets/img/mc/mc29.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="mc-photo">
@@ -207,24 +222,45 @@
                     </div>
                     <div class="mc-photo">
                         <img src="../assets/img/mc/mc29.jpg" alt="" class="img-fluid">
-                    </div>
+                    </div> -->
                     <!-- <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
                     <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
                     <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe> -->
+                    <video width="300px" controls id="myvideo">
+                        <source src="../assets/video/rain.mp4" type="video/mp4">
+                        <source src="rain.html" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
+                    <video width="300px" controls id="myvideo">
+                        <source src="../assets/video/rain.mp4" type="video/mp4">
+                        <source src="rain.html" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
+                    <video width="300px" controls id="myvideo">
+                        <source src="../assets/video/rain.mp4" type="video/mp4">
+                        <source src="rain.html" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
                 <div class="flex even-columns pb-0">
-                    <div class="mc-photo">
-                        <img src="../assets/img/mc/mc30.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="mc-photo">
-                        <img src="../assets/img/mc/mc30.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="mc-photo">
-                        <img src="../assets/img/mc/mc30.jpg" alt="" class="img-fluid">
-                    </div>
                     <!-- <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
                     <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
                     <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe> -->
+                    <video width="300px" controls id="myvideo">
+                        <source src="../assets/video/rain.mp4" type="video/mp4">
+                        <source src="rain.html" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
+                    <video width="300px" controls id="myvideo">
+                        <source src="../assets/video/rain.mp4" type="video/mp4">
+                        <source src="rain.html" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
+                    <video width="300px" controls id="myvideo">
+                        <source src="../assets/video/rain.mp4" type="video/mp4">
+                        <source src="rain.html" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
             </div>
         </section>
@@ -248,7 +284,7 @@
                         <a href="../index.html">Home</a>
                         <a href="about.html">About</a>
                         <a href="reviews.html">Reviews</a>
-                        <a href="../index.html#mcs">Get MC</a>
+                        <a href="../index.html#categories">Get MC</a>
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
