--- a/celebrate/pages/about.html
+++ b/celebrate/pages/about.html
@@ -47,7 +47,7 @@
                 <a href="reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
-                <a href="../index.html#mcs" class="nav-link">Get MC</a>
+                <a href="../index.html#categories" class="nav-link">Get MC</a>
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link">Contact</a>
@@ -215,7 +215,7 @@
                         <a href="../index.html">Home</a>
                         <a href="#home">About</a>
                         <a href="reviews.html">Reviews</a>
-                        <a href="../index.html#mcs">Get MC</a>
+                        <a href="../index.html#categories">Get MC</a>
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
