--- a/celebrate/pages/book_mc_mixed.html
+++ b/celebrate/pages/book_mc_mixed.html
@@ -47,7 +47,7 @@
                 <a href="reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
-                <a href="../index.html#mcs" class="nav-link">Get MC</a>
+                <a href="../index.html#categories" class="nav-link">Get MC</a>
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link">Contact</a>
@@ -310,7 +310,7 @@
                         <a href="../index.html">Home</a>
                         <a href="about.html">About</a>
                         <a href="reviews.html">Reviews</a>
-                        <a href="../index.html#mcs">Get MC</a>
+                        <a href="../index.html#categories">Get MC</a>
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
