--- a/celebrate/pages/mc_home.html
+++ b/celebrate/pages/mc_home.html
@@ -124,7 +124,7 @@
                         <a href="../index.html">Home</a>
                         <a href="about.html">About</a>
                         <a href="reviews.html">Reviews</a>
-                        <a href="../index.html#mcs">Get MC</a>
+                        <a href="../index.html#categories">Get MC</a>
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
