--- a/celebrate/pages/mc_user_view.html
+++ b/celebrate/pages/mc_user_view.html
@@ -157,7 +157,7 @@
                                 <i class="fab fa-facebook"></i>
                             </a>
                             <a href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-google"></i>
+                                <i class="fab fa-instagram"></i>
                             </a>
                             <a href="#" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-twitter"></i>
@@ -180,7 +180,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container pt-2">
+            <div id="portfolio" class="container pt-2">
                 <div class="row flex">
                     <h2 class="display-4">What I Have Done</h2>
                 </div>
@@ -197,20 +197,14 @@
                     <div class="mc-photo">
                         <img src="../assets/img/mc/mc31.jpg" alt="" class="img-fluid">
                     </div> -->
-                    <video width="300px" controls id="myvideo">
-                        <source src="../assets/video/rain.mp4" type="video/mp4">
-                        <source src="rain.html" type="video/ogg">
-                        Your browser does not support the video tag.
+                    <video width="300px" controls>
+                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
                     </video>
-                    <video width="300px" controls id="myvideo">
-                        <source src="../assets/video/rain.mp4" type="video/mp4">
-                        <source src="rain.html" type="video/ogg">
-                        Your browser does not support the video tag.
+                    <video width="300px" controls>
+                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
                     </video>
-                    <video width="300px" controls id="myvideo">
-                        <source src="../assets/video/rain.mp4" type="video/mp4">
-                        <source src="rain.html" type="video/ogg">
-                        Your browser does not support the video tag.
+                    <video width="300px" controls>
+                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="flex even-columns pb-0">
@@ -226,40 +220,28 @@
                     <!-- <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
                     <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
                     <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe> -->
-                    <video width="300px" controls id="myvideo">
-                        <source src="../assets/video/rain.mp4" type="video/mp4">
-                        <source src="rain.html" type="video/ogg">
-                        Your browser does not support the video tag.
+                    <video width="300px" controls>
+                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
                     </video>
-                    <video width="300px" controls id="myvideo">
-                        <source src="../assets/video/rain.mp4" type="video/mp4">
-                        <source src="rain.html" type="video/ogg">
-                        Your browser does not support the video tag.
+                    <video width="300px" controls>
+                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
                     </video>
-                    <video width="300px" controls id="myvideo">
-                        <source src="../assets/video/rain.mp4" type="video/mp4">
-                        <source src="rain.html" type="video/ogg">
-                        Your browser does not support the video tag.
+                    <video width="300px" controls>
+                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="flex even-columns pb-0">
                     <!-- <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
                     <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
                     <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe> -->
-                    <video width="300px" controls id="myvideo">
-                        <source src="../assets/video/rain.mp4" type="video/mp4">
-                        <source src="rain.html" type="video/ogg">
-                        Your browser does not support the video tag.
+                    <video width="300px" controls>
+                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
                     </video>
-                    <video width="300px" controls id="myvideo">
-                        <source src="../assets/video/rain.mp4" type="video/mp4">
-                        <source src="rain.html" type="video/ogg">
-                        Your browser does not support the video tag.
+                    <video width="300px" controls>
+                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
                     </video>
-                    <video width="300px" controls id="myvideo">
-                        <source src="../assets/video/rain.mp4" type="video/mp4">
-                        <source src="rain.html" type="video/ogg">
-                        Your browser does not support the video tag.
+                    <video width="300px" controls>
+                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
