--- a/celebrate/pages/mc_user_view.html
+++ b/celebrate/pages/mc_user_view.html
@@ -198,50 +198,35 @@
                         <img src="../assets/img/mc/mc31.jpg" alt="" class="img-fluid">
                     </div> -->
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
+                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
                     </video>
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
+                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
                     </video>
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
-                    </video>
-                </div>
-                <div class="flex even-columns pb-0">
-                    <!-- <div class="mc-photo">
-                        <img src="../assets/img/mc/mc29.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="mc-photo">
-                        <img src="../assets/img/mc/mc29.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="mc-photo">
-                        <img src="../assets/img/mc/mc29.jpg" alt="" class="img-fluid">
-                    </div> -->
-                    <!-- <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
-                    <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
-                    <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe> -->
-                    <video width="300px" controls>
-                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
-                    </video>
-                    <video width="300px" controls>
-                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
-                    </video>
-                    <video width="300px" controls>
-                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
+                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="flex even-columns pb-0">
-                    <!-- <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
-                    <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
-                    <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe> -->
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
+                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
                     </video>
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
+                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
                     </video>
                     <video width="300px" controls>
-                        <source src="../assets/video/Kingdom (feat. Naomi Raine & Chandler Moore) _ Maverick City Music x Kirk Franklin.mp4" type="video/mp4">
+                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="flex even-columns pb-0">
+                    <video width="300px" controls>
+                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
+                    </video>
+                    <video width="300px" controls>
+                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
+                    </video>
+                    <video width="300px" controls>
+                        <source src="../assets/video/Kingdom.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
